[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gbm-multiomics"
version = "0.1.0"
description = "Download and analyse TCGA-GBM multiomics data (RNA-seq, methylation, mutations, CNV, miRNA)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "openpyxl>=3.1",     # for CDR .xlsx reading
]

[project.optional-dependencies]
analysis = [
    "pydeseq2>=0.4",
    "lifelines>=0.27",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "gseapy>=1.1",
    "scikit-learn>=1.3",
    "adjustText>=1.1",
]
all = ["gbm-multiomics[analysis]"]

[project.scripts]
gbm-download = "gbm_multiomics.cli:main"
gbm-analyse  = "gbm_multiomics.cli:main_analyse"

[tool.setuptools.packages.find]
where = ["."]
include = ["gbm_multiomics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests",
    "integration: tests that hit the GDC API",
]
